--- a/styles/profile.module.scss
+++ b/styles/profile.module.scss
@@ -88,6 +88,8 @@
   font-weight: bold;
   font-size: 15px;
   padding: 6px 20px;
+  display: block;
+  margin: 10px auto;
   transition: 0.4s;
   &:hover {
     border-color: $darkRed;
@@ -115,8 +117,16 @@
   padding: 14px 0px;
   &:hover {
     background-color: transparent;
-    border-color: $lightRed;
-    color: $lightGray;
+    color: $lightRed;
+    border-color: $lightGray;
+  }
+  &:active {
+    background-color: transparent;
+    box-shadow: none;
+  }
+  &:focus {
+    background-color: transparent;
+    box-shadow: none;
   }
 }
 .footer {
